fix white space

--- a/client/src/views/Channels/UserContent/UserSettings/SettingsContent/SettingsContent.module.css
+++ b/client/src/views/Channels/UserContent/UserSettings/SettingsContent/SettingsContent.module.css
@@ -16,5 +16,5 @@
   flex: 1 1 auto;
   max-width: 740px;
   min-width: 460px;
-  min-height: 100%;
+  min-height: 0px;
 }
